--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,14 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule":true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
   "files": [
     "src/middleware/authMiddleware.ts",
     "custom.d.ts"
-  ]
+  ],
+  
 }
